--- a/README
+++ b/README
@@ -4,6 +4,7 @@ It's deployed at http://ostatus-unofficial.appspot.com/
 
 Source: https://github.com/snarfed/ostatus-unofficial
 Contact: Ryan Barrett <ostatus@ryanb.org>
+License: This project is placed in the public domain.
 
 Background on OStatus:
 http://ostatus.org/about
